working on home page

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# VITE_BASE_URL="http://localhost:4061/"
-VITE_BASE_URL="https://bloodbank-backend-e8cg.onrender.com/"
+VITE_BASE_URL="http://localhost:4061/"
+# VITE_BASE_URL="https://bloodbank-backend-e8cg.onrender.com/"
 ##############################################################
 
 VITE_ECY_ALGO = "AES-CBC"
