--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.0.17",
     "axios": "^1.8.4",
+    "flowbite-datepicker": "^1.3.2",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.487.0",
     "moment": "^2.30.1",
     "react": "^19.0.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
