--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.0",
     "redux": "^5.0.1",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.0.17",
     "yup": "^1.6.1"
   },
