--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.0",
-    "react-router-dom": "^7.5.0",
+    "react-router-dom": "^7.6.0",
+    "react-select": "^5.10.1",
     "redux": "^5.0.1",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.0.17",
